tests/lean/cmd_meta_errors.lean.expected.out
cmd_meta_errors.lean:2:0: error: command does not accept doc string
cmd_meta_errors.lean:5:0: error: command does not accept attributes
cmd_meta_errors.lean:7:8: error: command does not accept modifiers
cmd_meta_errors.lean:9:5: error: invalid 'meta' modifier for axiom
cmd_meta_errors.lean:11:8: error: unexpected definition modifier
cmd_meta_errors.lean:12:8: error: unexpected definition modifier
cmd_meta_errors.lean:14:0: error: invalid 'private' modifier for inductive type
cmd_meta_errors.lean:15:0: error: invalid 'protected' modifier for inductive type
cmd_meta_errors.lean:16:0: error: invalid 'noncomputable' modifier for inductive type
cmd_meta_errors.lean:18:8: error: invalid 'private' modifier for instance command
cmd_meta_errors.lean:19:10: error: invalid 'protected' modifier for instance command
cmd_meta_errors.lean:20:7: error: invalid 'mutual' modifier for instance command
