tests/lean/cmd_meta_errors.lean
/-- docs -/
run_cmd

@[class]
run_cmd

private run_cmd

meta axiom

private protected def f := 42
private private def f := 42

private inductive
protected inductive
noncomputable inductive

private instance
protected instance
mutual instance
